{
    "name": "PC Controls",
    "maps": [
        {
            "name": "PC",
            "id": "626636e5-2894-46ad-9435-f799e9340227",
            "actions": [
                {
                    "name": "PointerPosition",
                    "type": "Value",
                    "id": "4c19739d-86ef-470b-8b93-ad85c850cf60",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ActivateAbility",
                    "type": "Button",
                    "id": "46690839-96e9-4bbc-8827-cf8d21559487",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PauseGame",
                    "type": "Button",
                    "id": "075bce8f-27a4-4e6c-82a5-b1ff429d1777",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "67ebf225-08c9-4729-a306-3e63daa86549",
                    "path": "<Pointer>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0a897add-f217-43bf-9991-f083feb2fa72",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ActivateAbility",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "398625bf-8aa8-477f-8a2c-b7323dd24cf3",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PauseGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}